# OSA

./: .dockerignore  .env.example  .formatter.exs  .gitignore  AGENTS.md  AGENT_16_SUMMARY.md  ARMSTRONG_BUDGET_ENFORCER_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  CRASH_RECOVERY_AGENT_SUMMARY.md  Dockerfile  HEALTH_MONITOR_SUMMARY.md  HIPAA_BREACH_DETECTOR_SUMMARY.md  LICENSE  Makefile  OTEL_STEP_3_TRACEPARENT_IMPLEMENTATION.md  PHASE_3_COMPLETION_SUMMARY.md  README.md  SHARED_STATE_DETECTIVE_COMPLETION_REPORT.md  TEST_FIX_SUMMARY.md  UNBOUNDED_CACHE_FIX_SUMMARY.md  agent-C-completion.md  agent-E-completion.md  agent-F-completion.md  agent-G-completion.md  dev.sh  docker-compose.yml  go.mod  install.sh  mix.exs  run_osa.bat  run_osa.ps1  xref_graph.dot
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/binaries/: osagent-aarch64-apple-darwin
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs  tray.rs
priv/rust/tui/: Cargo.toml  Makefile
priv/rust/tui/src/: logging.rs  main.rs  util.rs
priv/rust/tui/src/app/: commands.rs  event_loop.rs  focus.rs  handle_actions.rs  handle_backend.rs  handle_dialogs.rs  keys.rs  layout.rs  mod.rs  state.rs  update.rs
priv/rust/tui/src/client/: auth.rs  http.rs  mod.rs  sse.rs  types.rs
priv/rust/tui/src/components/: activity.rs  agents.rs  header.rs  mod.rs  sidebar.rs  status_bar.rs  task_checklist.rs  tasks.rs  toast.rs
priv/rust/tui/src/config/: cli.rs  mod.rs
priv/rust/tui/src/dialogs/: command_palette.rs  file_picker.rs  mod.rs  model_picker.rs  onboarding.rs  permissions.rs  picker.rs  plan_review.rs  quit_confirm.rs  reasoning.rs  sessions.rs  survey.rs
priv/rust/tui/src/event/: backend.rs  mod.rs  terminal.rs
priv/rust/tui/src/render/: diff.rs  markdown.rs  mod.rs  syntax.rs
priv/rust/tui/src/style/: gradient.rs  mod.rs  themes.rs
priv/rust/tui/src/tools/: agent.rs  bash.rs  diagnostics.rs  file.rs  generic.rs  mcp.rs  mod.rs  references.rs  search.rs  todos.rs  web.rs
priv/rust/tui/src/view/: connecting.rs  main_layout.rs  mod.rs  onboarding_flow.rs
priv/rust/tui/src/voice/: capture.rs  mod.rs  transcribe.rs
(+2121 files in other folders)
