[package]
name = "osa-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "osagent"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tui-textarea = "0.7"
tui-scrollview = "0.6"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
similar = { version = "2", features = ["text"] }
fuzzy-matcher = "0.3"
arboard = "3"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
directories = "5"
anyhow = "1"
thiserror = "2"
unicode-width = "0.2"
unicode-segmentation = "1"

# Voice input
cpal = "0.15"
hound = "3.5"
zip = "2"

[profile.release]
lto = "thin"
strip = true
opt-level = "z"
